Get aes-gen to build again (for the default back end, at least).
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@22873 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/builtin/aes/Makefile.in
+++ b/src/lib/crypto/builtin/aes/Makefile.in
@@ -45,7 +45,7 @@ includes:: depend
 
 depend:: $(SRCS)
 
-aes-gen: aes-gen.o $(GEN_OBJS)
+../../$(CIMPL)/aes-gen: ../../$(CIMPL)/aes-gen.o $(GEN_OBJS)
 	$(CC_LINK) -I../../../../include $(LOCALINCLUDES) -o ../../$(CIMPL)/aes-gen ../../$(CIMPL)/aes-gen.o $(GEN_OBJS)
 
 run-aes-gen: ../../$(CIMPL)/aes-gen
