Remove krb5.conf, bigendian.o, and bigendian on make clean.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@22876 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/tests/mkeystash_compat/Makefile.in
+++ b/src/tests/mkeystash_compat/Makefile.in
@@ -48,5 +48,5 @@ mkeystash_check: kdc.conf krb5.conf bigendian
 	$(RM) $(TEST_DB)* stash_file
 
 clean::
-	$(RM) kdc.conf
+	$(RM) kdc.conf krb5.conf bigendian.$(OBJEXT) bigendian
 
