--- a/src/lib/crypto/crypto_tests/Makefile.in
+++ b/src/lib/crypto/crypto_tests/Makefile.in
@@ -45,7 +45,7 @@ EXTRADEPSRCS=\
 
 check-unix:: t_nfold t_encrypt t_prf t_prng t_hmac t_cf2 \
 		t_cksum4 t_cksum5 \
-		aes-test verify destest t_afss2k \
+		aes-test verify t_afss2k \
 		t_mddriver4 t_mddriver \
 		t_shs t_shs3 t_crc
 	$(RUN_SETUP) $(VALGRIND) ./t_nfold
@@ -67,7 +67,6 @@ check-unix:: t_nfold t_encrypt t_prf t_prng t_hmac t_cf2 \
 	$(RUN_SETUP) $(VALGRIND) ./verify -z
 	$(RUN_SETUP) $(VALGRIND) ./verify -m
 	$(RUN_SETUP) $(VALGRIND) ./verify
-	$(RUN_SETUP) $(VALGRIND) ./destest < $(srcdir)/keytest.data
 	$(RUN_SETUP) $(VALGRIND) ./t_afss2k
 	$(RUN_SETUP) $(VALGRIND) $(C)t_mddriver4 -x
 	$(RUN_SETUP) $(VALGRIND) $(C)t_mddriver -x
@@ -132,9 +131,6 @@ aes-test: aes-test.$(OBJEXT) $(CRYPTO_DEPLIB)
 verify$(EXEEXT): t_verify.$(OBJEXT) $(COM_ERR_DEPLIB) $(SUPPORT_DEPLIB)
 	$(CC_LINK) -o $@ t_verify.$(OBJEXT) -lcom_err $(SUPPORT_LIB) -lk5crypto
 
-destest$(EXEEXT): destest.$(OBJEXT)  $(SUPPORT_DEPLIB)
-	$(CC_LINK) -o $@ destest.$(OBJEXT) $(TOBJS) $(SUPPORT_LIB) -lk5crypto
-
 t_afss2k: t_afss2k.$(OBJEXT) $(COM_ERR_DEPLIB) $(SUPPORT_DEPLIB) $(CRYPTO_DEPLIB)
 	$(CC_LINK) -o $@ t_afss2k.$(OBJEXT) -lcom_err $(SUPPORT_LIB) -lk5crypto
 
@@ -162,7 +158,6 @@ clean::
 	$(RM) t_nfold.o t_nfold t_encrypt t_encrypt.o t_prng.o t_prng \
 		t_hmac.o t_hmac t_pkcs5.o t_pkcs5 pbkdf2.o t_prf t_prf.o t_cf2 t_cf2.o \
 		aes-test.o aes-test vt.txt vk.txt kresults.out 	\
-		destest.o destest 	\
 		t_afss2k.o t_afss2k t_cksum.o t_cksum 	\
 		t_crc.o t_crc t_cts.o t_cts 	\
 		t_mddriver4.o t_mddriver4 t_mddriver.o t_mddriver	\
