--- a/src/lib/crypto/crypto_tests/Makefile.in
+++ b/src/lib/crypto/crypto_tests/Makefile.in
@@ -155,15 +155,16 @@ ytest: ytest.o shs.o $(SUPPORT_DEPLIB) $(CRYPTO_DEPLIB)
 
 
 clean::
-	$(RM) t_nfold.o t_nfold t_encrypt t_encrypt.o t_prng.o t_prng \
-		t_hmac.o t_hmac t_pkcs5.o t_pkcs5 pbkdf2.o t_prf t_prf.o t_cf2 t_cf2.o \
-		aes-test.o aes-test vt.txt vk.txt kresults.out 	\
-		t_afss2k.o t_afss2k t_cksum.o t_cksum 	\
-		t_crc.o t_crc t_cts.o t_cts 	\
-		t_mddriver4.o t_mddriver4 t_mddriver.o t_mddriver	\
+	$(RM) t_nfold.o t_nfold nfold.$(OBJEXT) t_encrypt t_encrypt.o \
+		t_prng.o t_prng t_hmac.o t_hmac t_pkcs5.o t_pkcs5 pbkdf2.o \
+		t_prf t_prf.o t_cf2 t_cf2.o \
+		aes-test.o aes-test vt.txt vk.txt kresults.out \
+		t_afss2k.o t_afss2k t_cksum.o t_cksum \
+		t_crc.o t_crc t_cts.o t_cts \
+		t_mddriver4.o t_mddriver4 t_mddriver.o t_mddriver \
 		t_cksum4 t_cksum4.o t_cksum5 t_cksum5.o \
 		t_shs3 t_shs3.o t_shs t_shs.o verify t_verify.o  \
-		t_mddriver$(EXEEXT) $(OUTPRE)t_mddriver.$(OBJEXT)	\
+		t_mddriver$(EXEEXT) $(OUTPRE)t_mddriver.$(OBJEXT) \
 		t_shs$(EXEEXT) t_shs.$(OBJEXT) t_shs3$(EXEEXT) t_shs3.$(OBJEXT)
 
 	-$(RM) t_prng.output
