Include des_int.h for mit_des_fixup_key_parity prototype.  Adjust Makefile.in to find the proper header.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@22912 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/krb/rand2key/Makefile.in
+++ b/src/lib/crypto/krb/rand2key/Makefile.in
@@ -2,7 +2,7 @@ thisconfigdir=../../../..
 myfulldir=lib/crypto/krb/rand2key
 mydir=lib/crypto/krb/rand2key
 BUILDTOP=$(REL)..$(S)..$(S)..$(S)..
-LOCALINCLUDES = -I$(srcdir)/.
+LOCALINCLUDES = -I$(srcdir)/. -I$(srcdir)/../../@CRYPTO_IMPL@/des
 DEFS=
 
 ##DOS##BUILDTOP = ..\..\..\..
