--- a/src/lib/crypto/builtin/Makefile.in
+++ b/src/lib/crypto/builtin/Makefile.in
@@ -5,17 +5,19 @@ BUILDTOP=$(REL)..$(S)..$(S)..
 SUBDIRS=des arcfour aes	 md4 md5  sha1 enc_provider hash_provider
 LOCALINCLUDES = -I$(srcdir)/../krb 			\
 		-I$(srcdir)/../krb/hash_provider 	\
-		-I$(srcdir)/../@CRYPTO_IMPL@/des 	\
-		-I$(srcdir)/../@CRYPTO_IMPL@/aes 	\
-		-I$(srcdir)/../@CRYPTO_IMPL@/arcfour 	\
-		-I$(srcdir)/../@CRYPTO_IMPL@/sha1 	\
-		-I$(srcdir)/../@CRYPTO_IMPL@/md4 	\
-		-I$(srcdir)/../@CRYPTO_IMPL@/md5	\
-		-I$(srcdir)/../@CRYPTO_IMPL@/enc_provider	\
-		-I$(srcdir)/../@CRYPTO_IMPL@/hash_provider 	
+		-I$(srcdir)/des 	\
+		-I$(srcdir)/aes 	\
+		-I$(srcdir)/arcfour 	\
+		-I$(srcdir)/sha1 	\
+		-I$(srcdir)/md4 	\
+		-I$(srcdir)/md5	\
+		-I$(srcdir)/enc_provider	\
+		-I$(srcdir)/hash_provider 	
 PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
 DEFS=
+
+EXTRADEPSRCS= $(srcdir)/t_cf2.c 
 
 
 ##DOSBUILDTOP = ..\..\..
@@ -25,16 +27,16 @@ DEFS=
 ##DOSOBJFILEDEP =$(OUTPRE)crypto.lst $(OUTPRE)des.lst $(OUTPRE)md4.lst $(OUTPRE)md5.lst $(OUTPRE)sha1.lst $(OUTPRE)arcfour.lst $(OUTPRE)crc32.lst $(OUTPRE)dk.lst $(OUTPRE)old.lst $(OUTPRE)raw.lst $(OUTPRE)enc_prov.lst $(OUTPRE)hash_pro.lst $(OUTPRE)kh_pro.lst $(OUTPRE)aes.lst
 
 STLIBOBJS=\
-	../@CRYPTO_IMPL@/hmac.o	\
-	../@CRYPTO_IMPL@/pbkdf2.o		
+	hmac.o	\
+	pbkdf2.o		
 
 OBJS=\
-	$(OUTPRE)../@CRYPTO_IMPL@/hmac.$(OBJEXT)	\
-	$(OUTPRE)../@CRYPTO_IMPL@/pbkdf2.$(OBJEXT)		
+	$(OUTPRE)hmac.$(OBJEXT)	\
+	$(OUTPRE)pbkdf2.$(OBJEXT)		
 
 SRCS=\
-	$(srcdir)/../@CRYPTO_IMPL@/hmac.c	\
-	$(srcdir)/../@CRYPTO_IMPL@/pbkdf2.c	
+	$(srcdir)/hmac.c	\
+	$(srcdir)/pbkdf2.c	
 
 STOBJLISTS= des/OBJS.ST md4/OBJS.ST 	\
 	md5/OBJS.ST sha1/OBJS.ST 	\
@@ -59,6 +61,18 @@ includes:: depend
 depend:: $(SRCS)
 
 clean-unix:: clean-libobjs
+check-unix:: t_cf2
+	$(RUN_SETUP) $(VALGRIND) ./t_cf2 <$(srcdir)/t_cf2.in >t_cf2.output
+	diff t_cf2.output $(srcdir)/t_cf2.expected
+
+t_cf2$(EXEEXT): t_cf2.$(OBJEXT) $(SUPPORT_DEPLIB)
+	$(CC_LINK) -o $@ t_cf2.$(OBJEXT)  -lkrb5 -lk5crypto -lcom_err $(SUPPORT_LIB)
+
+clean::
+	$(RM)  t_cf2 t_cf2.o  t_cf2.output
+
+
+
 
 all-windows::
 	cd ..\des
