--- a/src/lib/crypto/builtin/des/Makefile.in
+++ b/src/lib/crypto/builtin/des/Makefile.in
@@ -13,50 +13,49 @@ RUN_SETUP = @KRB5_RUN_ENV@
 PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
 
-CIMPL = @CRYPTO_IMPL@/des
 
 STLIBOBJS=\
-	../../$(CIMPL)/afsstring2key.o	\
-	../../$(CIMPL)/d3_cbc.o	\
-	../../$(CIMPL)/d3_aead.o	\
-	../../$(CIMPL)/d3_kysched.o	\
-	../../$(CIMPL)/f_aead.o 	\
-	../../$(CIMPL)/f_cbc.o 	\
-	../../$(CIMPL)/f_cksum.o	\
-	../../$(CIMPL)/f_parity.o 	\
-	../../$(CIMPL)/f_sched.o 	\
-	../../$(CIMPL)/f_tables.o	\
-	../../$(CIMPL)/key_sched.o	\
-	../../$(CIMPL)/string2key.o	\
-	../../$(CIMPL)/weak_key.o
+	afsstring2key.o	\
+	d3_cbc.o	\
+	d3_aead.o	\
+	d3_kysched.o	\
+	f_aead.o 	\
+	f_cbc.o 	\
+	f_cksum.o	\
+	f_parity.o 	\
+	f_sched.o 	\
+	f_tables.o	\
+	key_sched.o	\
+	string2key.o	\
+	weak_key.o
 
-OBJS=	$(OUTPRE)../../$(CIMPL)/afsstring2key.$(OBJEXT)	\
-	$(OUTPRE)../../$(CIMPL)/d3_cbc.$(OBJEXT)	\
-	$(OUTPRE)../../$(CIMPL)/d3_aead.$(OBJEXT)	\
-	$(OUTPRE)../../$(CIMPL)/d3_kysched.$(OBJEXT)	\
-	$(OUTPRE)../../$(CIMPL)/f_aead.$(OBJEXT) 	\
-	$(OUTPRE)../../$(CIMPL)/f_cbc.$(OBJEXT) 	\
-	$(OUTPRE)../../$(CIMPL)/f_cksum.$(OBJEXT)	\
-	$(OUTPRE)../../$(CIMPL)/f_parity.$(OBJEXT) 	\
-	$(OUTPRE)../../$(CIMPL)/f_sched.$(OBJEXT) 	\
-	$(OUTPRE)../../$(CIMPL)/f_tables.$(OBJEXT)	\
-	$(OUTPRE)../../$(CIMPL)/key_sched.$(OBJEXT)	\
-	$(OUTPRE)../../$(CIMPL)/string2key.$(OBJEXT)	\
-	$(OUTPRE)../../$(CIMPL)/weak_key.$(OBJEXT)
+OBJS=	$(OUTPRE)afsstring2key.$(OBJEXT)	\
+	$(OUTPRE)d3_cbc.$(OBJEXT)	\
+	$(OUTPRE)d3_aead.$(OBJEXT)	\
+	$(OUTPRE)d3_kysched.$(OBJEXT)	\
+	$(OUTPRE)f_aead.$(OBJEXT) 	\
+	$(OUTPRE)f_cbc.$(OBJEXT) 	\
+	$(OUTPRE)f_cksum.$(OBJEXT)	\
+	$(OUTPRE)f_parity.$(OBJEXT) 	\
+	$(OUTPRE)f_sched.$(OBJEXT) 	\
+	$(OUTPRE)f_tables.$(OBJEXT)	\
+	$(OUTPRE)key_sched.$(OBJEXT)	\
+	$(OUTPRE)string2key.$(OBJEXT)	\
+	$(OUTPRE)weak_key.$(OBJEXT)
 
-SRCS=	$(srcdir)/../../$(CIMPL)/afsstring2key.c	\
-	$(srcdir)/../../$(CIMPL)/d3_cbc.c	\
-	$(srcdir)/../../$(CIMPL)/d3_aead.c	\
-	$(srcdir)/../../$(CIMPL)/d3_kysched.c	\
-	$(srcdir)/../../$(CIMPL)/f_aead.c	\
-	$(srcdir)/../../$(CIMPL)/f_cbc.c	\
-	$(srcdir)/../../$(CIMPL)/f_cksum.c	\
-	$(srcdir)/../../$(CIMPL)/f_parity.c	\
-	$(srcdir)/../../$(CIMPL)/f_sched.c	\
-	$(srcdir)/../../$(CIMPL)/f_tables.c	\
-	$(srcdir)/../../$(CIMPL)/key_sched.c	\
-	$(srcdir)/../../$(CIMPL)/weak_key.c	\
-	$(srcdir)/../../$(CIMPL)/string2key.c
+SRCS=	$(srcdir)/afsstring2key.c	\
+	$(srcdir)/d3_cbc.c	\
+	$(srcdir)/d3_aead.c	\
+	$(srcdir)/d3_kysched.c	\
+	$(srcdir)/f_aead.c	\
+	$(srcdir)/f_cbc.c	\
+	$(srcdir)/f_cksum.c	\
+	$(srcdir)/f_parity.c	\
+	$(srcdir)/f_sched.c	\
+	$(srcdir)/f_tables.c	\
+	$(srcdir)/key_sched.c	\
+	$(srcdir)/weak_key.c	\
+	$(srcdir)/string2key.c
 
 EXTRADEPSRCS = $(SRCDIR)destest.c
 
@@ -66,13 +65,29 @@ TOBJS = $(OUTPRE)key_sched.$(OBJEXT) $(OUTPRE)f_sched.$(OBJEXT) \
 	$(OUTPRE)f_cbc.$(OBJEXT) $(OUTPRE)f_tables.$(OBJEXT) \
 	$(OUTPRE)f_cksum.$(OBJEXT)
 
+verify$(EXEEXT): t_verify.$(OBJEXT) $(TOBJS) f_parity.$(OBJEXT) \
+	$(COM_ERR_DEPLIB) $(SUPPORT_DEPLIB)
+	$(CC_LINK) -o $@ t_verify.$(OBJEXT) $(TOBJS) f_parity.$(OBJEXT) \
+		-lcom_err $(SUPPORT_LIB)
+
 destest$(EXEEXT): destest.$(OBJEXT) $(TOBJS) $(SUPPORT_DEPLIB)
 	$(CC_LINK) -o $@ destest.$(OBJEXT) $(TOBJS) $(SUPPORT_LIB)
 
 all-unix:: all-libobjs
 
-check-unix:: destest
+TAFSS2KOBJS =							   \
+	t_afss2k.$(OBJEXT) $(TOBJS)				     \
+	afsstring2key.$(OBJEXT) f_parity.$(OBJEXT) weak_key.$(OBJEXT)
+
+t_afss2k$(EXEEXT): $(TAFSS2KOBJS) $(COM_ERR_DEPLIB) $(SUPPORT_DEPLIB)
+	$(CC_LINK) -o $@ $(TAFSS2KOBJS) -lcom_err $(SUPPORT_LIB)
+
+check-unix:: verify destest t_afss2k
+	$(RUN_SETUP) $(VALGRIND) ./verify -z
+	$(RUN_SETUP) $(VALGRIND) ./verify -m
+	$(RUN_SETUP) $(VALGRIND) ./verify
 	$(RUN_SETUP) $(VALGRIND) ./destest < $(srcdir)/keytest.data
+	$(RUN_SETUP) $(VALGRIND) ./t_afss2k
 
 includes:: depend
 
@@ -81,7 +96,8 @@ depend:: $(SRCS)
 check-windows::
 
 clean::
-	$(RM) destest.$(OBJEXT) destest$(EXEEXT)
+	$(RM) destest.$(OBJEXT) destest$(EXEEXT) \
+	t_verify.$(OBJEXT) t_afss2k.$(OBJEXT) t_afss2k$(EXEEXT)
 
 clean-unix:: clean-libobjs
 
