--- a/src/lib/crypto/builtin/hash_provider/Makefile.in
+++ b/src/lib/crypto/builtin/hash_provider/Makefile.in
@@ -2,8 +2,8 @@ thisconfigdir=../../../..
 myfulldir=lib/crypto/builtin/hash_provider
 mydir=lib/crypto/builtin/hash_provider
 BUILDTOP=$(REL)..$(S)..$(S)..$(S)..
-LOCALINCLUDES = -I$(srcdir)/../../krb/crc32 -I$(srcdir)/../../@CRYPTO_IMPL@/md4 \
-	-I$(srcdir)/../../@CRYPTO_IMPL@/md5 -I$(srcdir)/../../@CRYPTO_IMPL@/sha1
+LOCALINCLUDES = -I$(srcdir)/../../krb/crc32 -I$(srcdir)/../md4 \
+	-I$(srcdir)/../md5 -I$(srcdir)/../sha1
 DEFS=
 
 ##DOS##BUILDTOP = ..\..\..\..
@@ -13,23 +13,21 @@ DEFS=
 PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
 
-CIMPL = @CRYPTO_IMPL@/hash_provider
-
 STLIBOBJS= \
-	../../$(CIMPL)/hash_crc32.o 	\
-	../../$(CIMPL)/hash_md4.o 	\
-	../../$(CIMPL)/hash_md5.o 	\
-	../../$(CIMPL)/hash_sha1.o
+	hash_crc32.o 	\
+	hash_md4.o 	\
+	hash_md5.o 	\
+	hash_sha1.o
 
-OBJS=   $(OUTPRE)../../$(CIMPL)/hash_crc32.$(OBJEXT) 	\
-	$(OUTPRE)../../$(CIMPL)/hash_md4.$(OBJEXT) 	\
-	$(OUTPRE)../../$(CIMPL)/hash_md5.$(OBJEXT) 	\
-	$(OUTPRE)../../$(CIMPL)/hash_sha1.$(OBJEXT)
+OBJS=   $(OUTPRE)hash_crc32.$(OBJEXT) 	\
+	$(OUTPRE)hash_md4.$(OBJEXT) 	\
+	$(OUTPRE)hash_md5.$(OBJEXT) 	\
+	$(OUTPRE)hash_sha1.$(OBJEXT)
 
-SRCS=	$(srcdir)/../../$(CIMPL)/hash_crc32.c	\
-	$(srcdir)/../../$(CIMPL)/hash_md4.c 	\
-	$(srcdir)/../../$(CIMPL)/hash_md5.c 	\
-	$(srcdir)/../../$(CIMPL)/hash_sha1.c
+SRCS=	$(srcdir)/hash_crc32.c	\
+	$(srcdir)/hash_md4.c 	\
+	$(srcdir)/hash_md5.c 	\
+	$(srcdir)/hash_sha1.c
 
 ##DOS##LIBOBJS = $(OBJS)
 
