Resurrect deleted test files.  Adjust Makefile.in files to correctly define RUN_SETUP.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23029 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/builtin/Makefile.in
+++ b/src/lib/crypto/builtin/Makefile.in
@@ -13,6 +13,7 @@ LOCALINCLUDES = -I$(srcdir)/../krb 			\
 		-I$(srcdir)/md5	\
 		-I$(srcdir)/enc_provider	\
 		-I$(srcdir)/hash_provider 	
+RUN_SETUP = @KRB5_RUN_ENV@
 PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
 DEFS=
