--- a/src/lib/crypto/builtin/sha1/Makefile.in
+++ b/src/lib/crypto/builtin/sha1/Makefile.in
@@ -8,6 +8,7 @@ DEFS=
 ##DOS##PREFIXDIR=sha1
 ##DOS##OBJFILE=..\$(OUTPRE)sha1.lst
 
+RUN_SETUP = @KRB5_RUN_ENV@
 PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
 
