Set up an INIT-CMD to set CRYPTO_IMPL in config.status so that rebuilding Makefiles in lib/crypto works correctly.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23034 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/configure.in
+++ b/src/configure.in
@@ -123,6 +123,7 @@ AC_HELP_STRING([--with-crypto-impl=IMPL], [use specified crypto implementation @
 [CRYPTO_IMPL=$withval
 AC_MSG_RESULT("k5crypto will use \'$withval\'")
 ], withval=builtin)
+AC_CONFIG_COMMANDS(CRYPTO_IMPL, , CRYPTO_IMPL=$CRYPTO_IMPL)
 AC_SUBST(CRYPTO_IMPL)
 
 # --with-kdc-kdb-update makes the KDC update the database with last request
