ticket: 6577 subject: Account lockout
Merge Luke's users/lhoward/lockout2 branch to trunk.  Implements
account lockout policies for preauth-using principals using existing
principal metadata fields and new policy fields.  The kadmin API
version is bumped from 2 to 3 to compatibly extend the policy_ent_rec
structure.


git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23038 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/plugins/kdb/ldap/libkdb_ldap/Makefile.in
+++ b/src/plugins/kdb/ldap/libkdb_ldap/Makefile.in
@@ -54,8 +54,10 @@ SRCS= 	$(srcdir)/kdb_ldap.c \
 	$(srcdir)/princ_xdr.c \
 	$(srcdir)/ldap_fetch_mkey.c \
 	$(srcdir)/ldap_service_stash.c \
+	$(srcdir)/kdb_ext.c \
 	$(srcdir)/kdb_xdr.c \
-	$(srcdir)/ldap_err.c
+	$(srcdir)/ldap_err.c \
+	$(srcdir)/lockout.c \
 
 STOBJLISTS=OBJS.ST
 STLIBOBJS= kdb_ldap.o \
@@ -74,8 +76,10 @@ STLIBOBJS= kdb_ldap.o \
 	princ_xdr.o \
 	ldap_fetch_mkey.o \
 	ldap_service_stash.o \
+	kdb_ext.o \
 	kdb_xdr.o \
-	ldap_err.o
+	ldap_err.o \
+	lockout.o
 
 all-unix:: all-liblinks
 install-unix:: install-libs
