--- a/src/plugins/kdb/db2/Makefile.in
+++ b/src/plugins/kdb/db2/Makefile.in
@@ -25,7 +25,7 @@ DB_DEPS-redirect = $(BUILDTOP)/include/db.h
 DB_LIB		= @DB_LIB@
 KDB5_DB_LIB	= @KDB5_DB_LIB@
 DB_DEPLIB	= $(DB_DEPLIB-@DB_VERSION@)
-DB_DEPLIB-k5	= $(TOPLIBD)/libdb$(DEPLIBEXT)
+DB_DEPLIB-k5	= $(TOPLIBD)/libdb$(DEPLIBEXT) $(KADMSRV_DEPLIBS)
 DB_DEPLIB-sys	=
 
 LIBBASE=db2
@@ -39,7 +39,7 @@ SHLIB_EXPDEPS = \
 	$(GSSRPC_DEPLIBS) \
 	$(TOPLIBD)/libk5crypto$(SHLIBEXT) \
 	$(TOPLIBD)/libkrb5$(SHLIBEXT)
-SHLIB_EXPLIBS= $(GSSRPC_LIBS) -lkrb5 -lcom_err -lk5crypto $(KDB5_DB_LIB) $(SUPPORT_LIB) $(LIBS) @DB_EXTRA_LIBS@
+SHLIB_EXPLIBS= $(GSSRPC_LIBS) -lkrb5 -lcom_err -lk5crypto $(KDB5_DB_LIB) $(KADMSRV_LIBS) $(SUPPORT_LIB) $(LIBS) @DB_EXTRA_LIBS@
 
 SHLIB_DIRS=-L$(TOPLIBD)
 SHLIB_RDIRS=$(KRB5_LIBDIR)
@@ -56,8 +56,10 @@ SRCS= \
 	$(srcdir)/adb_openclose.c \
 	$(srcdir)/adb_policy.c \
 	$(srcdir)/kdb_db2.c \
+	$(srcdir)/kdb_ext.c \
 	$(srcdir)/pol_xdr.c \
-	$(srcdir)/db2_exp.c
+	$(srcdir)/db2_exp.c \
+	$(srcdir)/lockout.c
 
 STOBJLISTS=OBJS.ST $(DBOBJLISTS)
 STLIBOBJS= \
@@ -65,8 +67,10 @@ STLIBOBJS= \
 	adb_openclose.o \
 	adb_policy.o \
 	kdb_db2.o \
+	kdb_ext.o \
 	pol_xdr.o \
-	db2_exp.o
+	db2_exp.o \
+	lockout.o
 
 all-unix:: all-liblinks
 install-unix:: install-libs
