Add "reindent" target to top-level Makefile.in.  Add krb5-batch-indent.el.  These perform a batch reindent based upon the Emacs file-local variable settings, taking care to distinguish between files that are supposed to conform to the coding style versus those that are marked as being exceptions.  A later commit will explicitly mark the files that we expect to conform to our coding standards.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23061 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -654,3 +654,14 @@ coverity prevent cov: Makefiles
 	else \
 		echo "** Coverity Prevent analysis results not commit to Defect Manager"; \
 	fi
+
+FIND = find
+XARGS = xargs
+EMACS = emacs
+
+reindent::
+	$(FIND) $(SRCTOP) \
+	\( -name '*.[ch]' -o -name '*.hin' -o -name '*.[ch].in' \) \
+	-print0 | $(XARGS) -0 $(EMACS) -q -batch \
+	-l $(SRCTOP)/util/krb5-c-style.el \
+	-l $(SRCTOP)/util/krb5-batch-reindent.el
