Add variable DB_VERSION to Makefile.in.  Generate deps so that configure will work.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23075 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/plugins/kdb/hdb/Makefile.in
+++ b/src/plugins/kdb/hdb/Makefile.in
@@ -8,6 +8,7 @@ PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
 MODULE_INSTALL_DIR = $(KRB5_DB_MODULE_DIR)
 DEFS=
+DB_VERSION = @DB_VERSION@
 
 LOCALINCLUDES = -I../../../lib/kdb -I$(srcdir)/../../../lib/kdb
 DEFINES = -DPLUGIN -DSHLIBEXT=\"$(SHLIBEXT)\"
