Remove "verify" on make clean
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23076 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/builtin/des/Makefile.in
+++ b/src/lib/crypto/builtin/des/Makefile.in
@@ -96,7 +96,7 @@ depend:: $(SRCS)
 check-windows::
 
 clean::
-	$(RM) destest.$(OBJEXT) destest$(EXEEXT) \
+	$(RM) destest.$(OBJEXT) destest$(EXEEXT) verify$(EXEEXT) \
 	t_verify.$(OBJEXT) t_afss2k.$(OBJEXT) t_afss2k$(EXEEXT)
 
 clean-unix:: clean-libobjs
