--- a/src/lib/crypto/openssl/des/Makefile.in
+++ b/src/lib/crypto/openssl/des/Makefile.in
@@ -14,53 +14,23 @@ PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
 
 
-STLIBOBJS=\
-	afsstring2key.o	\
-	d3_cbc.o	\
-	d3_aead.o	\
-	d3_kysched.o	\
-	f_aead.o 	\
-	f_cbc.o 	\
-	f_cksum.o	\
+STLIBOBJS= des_oldapis.o \
 	f_parity.o 	\
-	f_sched.o 	\
-	key_sched.o	\
 	string2key.o	\
 	weak_key.o
 
-OBJS=	$(OUTPRE)afsstring2key.$(OBJEXT)	\
-	$(OUTPRE)d3_cbc.$(OBJEXT)	\
-	$(OUTPRE)d3_aead.$(OBJEXT)	\
-	$(OUTPRE)d3_kysched.$(OBJEXT)	\
-	$(OUTPRE)f_aead.$(OBJEXT) 	\
-	$(OUTPRE)f_cbc.$(OBJEXT) 	\
-	$(OUTPRE)f_cksum.$(OBJEXT)	\
-	$(OUTPRE)f_parity.$(OBJEXT) 	\
-	$(OUTPRE)f_sched.$(OBJEXT) 	\
-	$(OUTPRE)key_sched.$(OBJEXT)	\
+OBJS=	$(OUTPRE)f_parity.$(OBJEXT) 	\
+	$(OUTPRE)des_oldapis.$(OBJEXT) 	\
 	$(OUTPRE)string2key.$(OBJEXT)	\
 	$(OUTPRE)weak_key.$(OBJEXT)
 
-SRCS=	$(srcdir)/afsstring2key.c	\
-	$(srcdir)/d3_cbc.c	\
-	$(srcdir)/d3_aead.c	\
-	$(srcdir)/d3_kysched.c	\
-	$(srcdir)/f_aead.c	\
-	$(srcdir)/f_cbc.c	\
-	$(srcdir)/f_cksum.c	\
-	$(srcdir)/f_parity.c	\
-	$(srcdir)/f_sched.c	\
-	$(srcdir)/key_sched.c	\
+SRCS=	$(srcdir)/f_parity.c	\
+	$(srcdir)/des_oldapis.c	\
 	$(srcdir)/weak_key.c	\
 	$(srcdir)/string2key.c
 
 
 ##DOS##LIBOBJS = $(OBJS)
-
-TOBJS = $(OUTPRE)key_sched.$(OBJEXT) $(OUTPRE)f_sched.$(OBJEXT) \
-	$(OUTPRE)f_cbc.$(OBJEXT)  \
-	$(OUTPRE)f_cksum.$(OBJEXT)
-
 
 all-unix:: all-libobjs
 
