Reformat some block comments.  Refine lib/krb5/asn.1 reindent exclusion into individual file exclusions.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23132 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -673,7 +673,12 @@ BSDFILES = \
 	lib/krb5/krb/strptime.c
 
 OTHEREXCLUDES = \
-	lib/krb5/asn.1 \
+	lib/krb5/asn.1/asn1_decode.h \
+	lib/krb5/asn.1/asn1_encode.h \
+	lib/krb5/asn.1/asn1_k_encode.c \
+	lib/krb5/asn.1/asn1_make.h \
+	lib/krb5/asn.1/asn1buf.h \
+	lib/krb5/asn.1/krb5_decode.c \
 	lib/krb5/krb/deltat.c \
 	lib/krb5/unicode
 
