Reindent include directory, reformatting prototypes as necessary. Exclude include/gssrpc due to its Sun origin and k5-platform.h due to macros too hairy for emacs c-mode to handle.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23180 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -662,6 +662,7 @@ PYTHON = python
 
 INDENTDIRS = \
 	clients \
+	include \
 	kadmin \
 	kdc \
 	lib/kadm5 \
@@ -684,6 +685,8 @@ BSDFILES = \
 	slave/kpropd_rpc.c
 
 OTHEREXCLUDES = \
+	include/k5-platform.h \
+	include/gssrpc \
 	lib/krb5/asn.1/asn1_decode.h \
 	lib/krb5/asn.1/asn1_encode.h \
 	lib/krb5/asn.1/asn1_k_encode.c \
