Add an exception for include/iprop.h and revert its reformatting, since it was generated with rpcgen.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23185 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -685,6 +685,7 @@ BSDFILES = \
 	slave/kpropd_rpc.c
 
 OTHEREXCLUDES = \
+	include/iprop.h \
 	include/k5-platform.h \
 	include/gssrpc \
 	lib/krb5/asn.1/asn1_decode.h \
