Simplify depfix.pl by assuming that all files outside of the source and build directory (after substitutions) are external headers which should not be tracked.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23314 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config/post.in
+++ b/src/config/post.in
@@ -88,10 +88,8 @@ depend-dependencies:
 # references in rules for non-library objects in a directory where
 # library objects happen to be built.  It's mostly harmless.
 .depend: .d $(top_srcdir)/util/depfix.pl
-	x=`$(CC) -print-libgcc-file-name` ; \
 	perl $(top_srcdir)/util/depfix.pl '$(top_srcdir)' '$(mydir)' \
-		'$(srcdir)' '$(BUILDTOP)' "$$x" '$(STLIBOBJS)' \
-		< .d > .depend
+		'$(srcdir)' '$(BUILDTOP)' '$(STLIBOBJS)' < .d > .depend
 
 # Temporarily keep the rule for removing the dependency line eater
 # until we're sure we've gotten everything converted and excised the
